# IRCAR-ITS

./: .gitignore  LICENSE.md  README.md  init_make.sh  make.sh  run.sh
Log/: log.txt
config/: static_conf.yaml
src/master/: CMakeLists.txt  package.xml
src/master/include/master/: MachineState.hh  master.hh  master_urban.hh  robot.hh
src/master/launch/: master.launch
src/master/src/: master.cc  master_urban.cc
src/motion/: CMakeLists.txt  package.xml
src/motion/include/motion/: motion.hh
src/motion/src/: motion.cpp
src/msg_collection/: CMakeLists.txt  package.xml
src/msg_collection/msg/: CmdVision.msg  Obstacles.msg  PointArray.msg  RealPosition.msg  SlopeIntercept.msg
src/utils/: CMakeLists.txt  package.xml
src/utils/include/entity/: entity.hh
src/utils/include/logger/: logger.h  logger.hh
src/utils/include/math/: math.hh
src/utils/include/pid/: pid.h
src/utils/include/potential_field/: potential_field.hh
src/utils/src/: entity.cc  logger.cc  logger.cpp  math.cc  pid.cc  potential_field.cc
src/vision/: CMakeLists.txt  package.xml
src/vision/include/aruco/: road_sign_detector.hpp
src/vision/include/imp/: anderdevelop.hpp  imph.hh  imph2.hh
src/vision/include/pinhole/: pinhole.hh
src/vision/include/sign_detector/: aruco.hpp
src/vision/include/vision/: LaneDetect.hh  urban.hpp  vision.hh
src/vision/launch/: vision.launch
src/vision/scripts/: trial.py  vision.py
src/vision/src/: anderdevelop.cpp  inverse_perspective_mapping.cpp  lidar.cpp  road_sign_detector.cpp  vision.cpp  vision2.cpp  vision2.cpp.bak  vision3.cpp  vision_backup.cpp  vision_urban.cpp
